fix bug where text runs right up to right edge of screen on iphone se

--- a/pattern-lab/source/_patterns/03-organisms/05-sections/01-section.scss
+++ b/pattern-lab/source/_patterns/03-organisms/05-sections/01-section.scss
@@ -16,5 +16,6 @@
 .sfgov-section__content {
   .paragraph--type--step{
       margin-left: 25px;
+      margin-right: 25px;
   }
 }
